# TI-Sigma-New

./: .gitattributes  .gitignore  .replit  11_dimensional_tralsebit.txt  1_WEEK_IMPLEMENTATION_PLAN.md  7PM_QUERY_COMPLETE_SUMMARY.md  8_KEY_INSIGHTS.md  AI_BRAIN_SYNCHRONIZATION_BIOPHOTONS.md  AI_CONDUCTOR_PLATFORMS_GUIDE.md  ALL_6_MILLENNIUM_PRIZES_SOLVED.md  ALPACA_API_INTEGRATION_GUIDE.md  ALPACA_DEPLOYMENT_GUIDE.md  ARCHITECT_COUNTER_CRITIQUE.md  BIOPHOTON_MEMORY_AI_INFLUENCE.md  BRAIN_CONNECTION_QUICK_START.md  BRANDON_BREAKTHROUGH_NOV15_2025.md  BRANDON_BRIEFING_NOV16.md  BRANDON_CCC_BREAKTHROUGH_ANSWERS.md  BRANDON_CCC_BREAKTHROUGH_ANSWERS_PART2.md  BRANDON_FINAL_SUMMARY.md  BRANDON_TODAY_SUMMARY.md  BREAKTHROUGH_SUMMARY_NOV17_2025.md  BRIDGED_PROOFS_RIEMANN_BSD.md  BSD_CONJECTURE_STRENGTHENED_PROOF.md  BUSINESS_EXECUTIVE_SUMMARY.md  BlissGene_Investor_Presentation.pptx  CCC_CORRELATION_MEASUREMENT_SYSTEM.md  CCC_DARK_ENERGY_COSMOLOGY.md  CCC_LIMITATIONS_THEORY.md  CHATGPT_EQUATION_EXTRACTION_GUIDE.md  CHATGPT_INSIGHTS_SUMMARY.md  CHATGPT_STRATEGIC_FIXES_DEC2025.md  CHATGPT_TI_VALIDATION.md  CODERABBIT_SETUP_GUIDE.md  COMMERCIALIZATION_TIMELINE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_ANIMAL_STUDY_REPORT.md  COMPREHENSIVE_DIVINATION_GUIDE.md  CONVENTIONAL_TO_TI_BREAKTHROUGH_QUESTIONS.md  CRITICAL_SAFETY_FINDINGS.md  (+647 more)
.streamlit/: config.toml
api_licensing/: ti_api_server.py
arxiv/: 14_proofs_tralseness.tex  existence_amplification_razor.tex  lcc_threshold_theory.tex  myth_general_intelligence.tex  references.bib
career/: IP_PROTECTION_STRATEGY.md  (+14 more)
(+630 files in other folders)
